[package]
name = "copyvec"
version = "0.1.0"
authors = ["Andres Franco <andres.a.franco.fr@gmail.com>"]
keywords = ["vec", "no_std", "no-std"]
categories = ["data-structures", "no-std"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Provides `Serialize` and `Deserialize` implementations
serde = { version = "1.0", optional = true, default-features = false }

[dev-dependencies]
serde_test = "1.0"

[features]
default = []
# "serde" is the only optional feature for now